noinst_PROGRAMS = example application binary keyNewExample lookup
example_SOURCES = example.c
example_LDFLAGS = -L../src/libelektra
example_LDADD = -lelektra

application_SOURCES = application.c
application_LDFLAGS = -L../src/libelektra
application_LDADD = -lelektra

binary_SOURCES = binary.c
binary_LDFLAGS = -L../src/libelektra
binary_LDADD = -lelektra

keyNewExample_SOURCES = keyNewExample.c
keyNewExample_LDFLAGS = -L../src/libelektra
keyNewExample_LDADD = -lelektra

lookup_SOURCES = lookup.c
lookup_LDFLAGS = -L../src/libelektra
lookup_LDADD = -lelektra

INCLUDES = -I../src/include

