noinst_PROGRAMS = backend key application binary keyNewExample lookup

key_SOURCES = key.c
key_LDFLAGS = -L../src/libelektra
key_LDADD = -lelektra

backend_SOURCES = backend.c
backend_LDFLAGS = -L../src/libelektra
backend_LDADD = -lelektra

application_SOURCES = application.c
application_LDFLAGS = -L../src/libelektra
application_LDADD = -lelektra

binary_SOURCES = binary.c
binary_LDFLAGS = -L../src/libelektra
binary_LDADD = -lelektra

keyNewExample_SOURCES = keyNewExample.c
keyNewExample_LDFLAGS = -L../src/libelektra
keyNewExample_LDADD = -lelektra

lookup_SOURCES = lookup.c
lookup_LDFLAGS = -L../src/libelektra
lookup_LDADD = -lelektra

INCLUDES = -I../src/include

