elektraenvdir = $(sysconfdir)/profile.d
elekscriptdir = $(docdir)/scripts

EXTRA_DIST = benchmark-createtree convert-hosts convert-inittab convert-users elektraenv.sh \
	     convert-fstab convert-hwconfKudzu convert-network convert-xfree update-backend

elektraenv_DATA = elektraenv.sh
elekscript_DATA = benchmark-createtree convert-hosts convert-inittab convert-users elektraenv.sh \
       		  convert-fstab convert-hwconfKudzu convert-network convert-xfree update-backend

