# $Id$

elektraenvdir = $(sysconfdir)/profile.d
elektrainitdir = $(sysconfdir)/init.d
elekscriptdir = $(docdir)/scripts

dist_elektraenv_SCRIPTS = elektraenv.sh
dist_elektrainit_SCRIPTS = kdbd
dist_elekscript_DATA = benchmark-createtree convert-hosts convert-inittab \
  convert-users convert-fstab convert-hwconfKudzu convert-network \
  convert-xfree update-backend kdbd

MAINTAINERCLEANFILES = \
	Makefile.in
